.gradle/gradle.log
WARNING: You are using an unsupported version of ForgeGradle.
Please consider upgrading to ForgeGradle 5 and helping in the efforts to get old versions working on the modern toolchain.
See https://gist.github.com/TheCurle/fe7ad3ede188cbdd15c235cc75d52d4a for more info on contributing.
#################################################
         ForgeGradle 2.1.3-g6a7c715        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP unknown               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava UP-TO-DATE
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaX:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:4: error: cannot find symbol
import com.example.educationmod.content.EducationalContent;
                                       ^
  symbol:   class EducationalContent
  location: package com.example.educationmod.content
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:10: error: package cpw.mods.fml.common.eventhandler does not exist
import cpw.mods.fml.common.eventhandler.SubscribeEvent;
                                       ^
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:11: error: package cpw.mods.fml.common.gameevent does not exist
import cpw.mods.fml.common.gameevent.TickEvent;
                                    ^
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:12: error: package cpw.mods.fml.common.gameevent.TickEvent does not exist
import cpw.mods.fml.common.gameevent.TickEvent.Phase;
                                              ^
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:29: error: cannot find symbol
import com.example.educationmod.content.EducationalContent;
                                       ^
  symbol:   class EducationalContent
  location: package com.example.educationmod.content
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:31: error: package cpw.mods.fml.relauncher does not exist
import cpw.mods.fml.relauncher.Side;
                              ^
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:32: error: package cpw.mods.fml.relauncher does not exist
import cpw.mods.fml.relauncher.SideOnly;
                              ^
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\QuizEvents.java:4: error: cannot find symbol
import com.example.educationmod.gui.QuizScreen;
                                   ^
  symbol:   class QuizScreen
  location: package com.example.educationmod.gui
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:37: error: cannot find symbol
    @SideOnly(Side.CLIENT)
     ^
  symbol:   class SideOnly
  location: class EventHandlers
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:39: error: cannot find symbol
        EducationalContent content = ContentLoader.contents.stream()
        ^
  symbol:   class EducationalContent
  location: class EventHandlers
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:40: error: cannot find symbol
            .filter(c -> c.getTopic() != null && c.getTopic().equalsIgnoreCase(topic))
                          ^
  symbol:   method getTopic()
  location: variable c of type QuizContent
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:40: error: cannot find symbol
            .filter(c -> c.getTopic() != null && c.getTopic().equalsIgnoreCase(topic))
                                                  ^
  symbol:   method getTopic()
  location: variable c of type QuizContent
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\EventHandlers.java:77: error: cannot find symbol
        MovingObjectPosition mop = EducationMod.proxy.getPlayerLookTarget(player);
                                                     ^
  symbol:   method getPlayerLookTarget(EntityPlayer)
  location: variable proxy of type CommonProxy
X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\events\QuizEvents.java:39: error: cannot find symbol
            mc.displayGuiScreen(new QuizScreen(quiz));
                                    ^
  symbol:   class QuizScreen
  location: class QuizEvents
Note: X:\WORKING CODE\MinecraftMod_1_8_9\MinecraftMod\build\sources\main\java\com\example\educationmod\ClientProxy.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
14 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 5.439 secs
